--- a/ProyectoFinal/src/app/components/header/header.component.css
+++ b/ProyectoFinal/src/app/components/header/header.component.css
@@ -1,3 +1,7 @@
 div{
-    background-color: blue;
+    background-color: #242480;
+}
+app-social-media{
+    float: right;
+    margin-top: 25px;
 }
