--- a/ProyectoFinal/src/app/components/header/header.component.html
+++ b/ProyectoFinal/src/app/components/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<div>
+   <app-logo-ap></app-logo-ap>
+   <app-social-media></app-social-media>
+   <app-banner></app-banner>
+</div>
