--- a/ProyectoFinal/src/app/components/hysskills/hysskills.component.html
+++ b/ProyectoFinal/src/app/components/hysskills/hysskills.component.html
@@ -2,8 +2,29 @@
     <h1>Hard & Soft Skills</h1>
     <div class="text-center col-sm-4 col-md-4 col-lg-4">
         <circle-progress
-        [percent]="85"
+        [percent]="40"
         [radius]="100"
+        [imageSrc]="'../../../assets/html.png'"
+        [showImage]="true"
+        [imageHeight]="80"
+        [imageWidth]="80"
+        [outerStrokeWidth]="12"
+        [innerStrokeWidth]="5"
+       
+        [outerStrokeColor]="'#c700ff'"
+        [innerStrokeColor]="'#BD7CCF'"
+        [animation]="true"
+        [animationDuration]="600"
+    ></circle-progress>
+    </div>
+    <div class="text-center col-sm-4 col-md-4 col-lg-4">
+        <circle-progress
+        [percent]="30"
+        [radius]="100"
+        [imageSrc]="'../../../assets/CSS.png'"
+        [showImage]="true"
+        [imageHeight]="80"
+        [imageWidth]="80"
         [outerStrokeWidth]="12"
         [innerStrokeWidth]="5"
         [outerStrokeColor]="'#c700ff'"
@@ -14,8 +35,12 @@
     </div>
     <div class="text-center col-sm-4 col-md-4 col-lg-4">
         <circle-progress
-        [percent]="85"
+        [percent]="30"
         [radius]="100"
+        [imageSrc]="'../../../assets/js.png'"
+        [showImage]="true"
+        [imageHeight]="80"
+        [imageWidth]="80"
         [outerStrokeWidth]="12"
         [innerStrokeWidth]="5"
         [outerStrokeColor]="'#c700ff'"
@@ -26,8 +51,12 @@
     </div>
     <div class="text-center col-sm-4 col-md-4 col-lg-4">
         <circle-progress
-        [percent]="85"
+        [percent]="45"
         [radius]="100"
+        [imageSrc]="'../../../assets/git.png'"
+        [showImage]="true"
+        [imageHeight]="80"
+        [imageWidth]="80"
         [outerStrokeWidth]="12"
         [innerStrokeWidth]="5"
         [outerStrokeColor]="'#c700ff'"
@@ -38,8 +67,12 @@
     </div>
     <div class="text-center col-sm-4 col-md-4 col-lg-4">
         <circle-progress
-        [percent]="85"
+        [percent]="100"
         [radius]="100"
+        [imageSrc]="'../../../assets/grupal.png'"
+        [showImage]="true"
+        [imageHeight]="80"
+        [imageWidth]="80"
         [outerStrokeWidth]="12"
         [innerStrokeWidth]="5"
         [outerStrokeColor]="'#c700ff'"
@@ -50,20 +83,12 @@
     </div>
     <div class="text-center col-sm-4 col-md-4 col-lg-4">
         <circle-progress
-        [percent]="85"
+        [percent]="65"
         [radius]="100"
-        [outerStrokeWidth]="12"
-        [innerStrokeWidth]="5"
-        [outerStrokeColor]="'#c700ff'"
-        [innerStrokeColor]="'#BD7CCF'"
-        [animation]="true"
-        [animationDuration]="600"
-    ></circle-progress>
-    </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-        [percent]="85"
-        [radius]="100"
+        [imageSrc]="'../../../assets/eng.png'"
+        [showImage]="true"
+        [imageHeight]="80"
+        [imageWidth]="80"
         [outerStrokeWidth]="12"
         [innerStrokeWidth]="5"
         [outerStrokeColor]="'#c700ff'"
