--- a/ProyectoFinal/src/app/components/hysskills/hysskills.component.html
+++ b/ProyectoFinal/src/app/components/hysskills/hysskills.component.html
@@ -1,6 +1,7 @@
 <div class="row">
     <h1>Hard & Soft Skills</h1>
     <div class="text-center col-sm-4 col-md-4 col-lg-4">
+        <p>HTML</p>
         <circle-progress
         [percent]="40"
         [radius]="100"
@@ -50,6 +51,7 @@
     ></circle-progress>
     </div>
     <div class="text-center col-sm-4 col-md-4 col-lg-4">
+        <P>GitHub</P>
         <circle-progress
         [percent]="45"
         [radius]="100"
@@ -67,7 +69,7 @@
     </div>
     <div class="text-center col-sm-4 col-md-4 col-lg-4">
         <circle-progress
-        [percent]="100"
+        [percent]="90"
         [radius]="100"
         [imageSrc]="'../../../assets/grupal.png'"
         [showImage]="true"
