--- a/ProyectoFinal/src/app/components/logo-ap/logo-ap.component.css
+++ b/ProyectoFinal/src/app/components/logo-ap/logo-ap.component.css
@@ -1,3 +1,40 @@
+.container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.redes{
+    margin-right: 0.7em;
+}
+
 #logoAP{
     width: 150px;
+}
+
+img{
+    width: 50px;
+    margin: 0.2em;
+}
+
+.btn{
+    border-width: medium;
+    margin: 0.2em;
+}
+
+/*--- para celulares ---*/
+@media(max-width: 575px){
+    .container{
+        flex-direction: column;
+    }
+    
+    .redes{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+       
+    .redes img{
+        margin: 0.2em;
+    }
 }
