--- a/ProyectoFinal/src/app/components/logo-ap/logo-ap.component.html
+++ b/ProyectoFinal/src/app/components/logo-ap/logo-ap.component.html
@@ -1,2 +1,20 @@
-<img src="../../../assets/APLogo.png" id="logoAP">
+<div class="row">
+    <div class="container">
+        <div class="logo">
+            <img src="../../../assets/APLogo.png" id="logoAP">
+        </div>
+        <div class="redes">
+            <div>
+                <a href="https://www.linkedin.com/in/natali-ledesma/"><img src="../../../assets/linkedin.png" id="linkedin" alt="Linkedin"></a>
+                <a href="https://www.facebook.com/ledesmanatali"><img src="../../../assets/facebook.png" id="facebook" alt="Facebook"></a>
+                <a href="https://twitter.com/AkaneTabai"><img src="../../../assets/twitter.png" id="twitter" alt="Twitter"></a>
+                <a href="https://github.com/NataliLed"><img src="../../../assets/github.png" id="github" alt="Github"></a>
+                <a href="https://www.instagram.com/tabaibooks/"><img src="../../../assets/instagram.png" id="instagram" alt="Instagram"></a>
+                <button type="button" class="btn btn-outline-light">ACCEDER</button>
+            </div>
+            
+        </div>
+    </div>
+
+
 
