--- a/ProyectoFinal/FrontEnd/src/app/components/banner/banner.component.html
+++ b/ProyectoFinal/FrontEnd/src/app/components/banner/banner.component.html
@@ -1,3 +1,3 @@
-<div class="row">
+<div>
     <img src="../../../assets/banner.png" class="img-fluid" alt="Banner Bienvenidos a mi portfolio">
 </div>
